[package]
name = "pmp-gateway-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
regex = "1.10"
