[package]
name = "pmp-gateway-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "limit", "timeout", "request-id", "compression-gzip", "compression-br", "decompression-gzip", "decompression-br"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
bytes = "1.11"
regex = "1.10"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Security
jsonwebtoken = "9.3"
governor = "0.6"

# Circuit breaker and resilience
failsafe = "1.3"

# Caching
moka = { version = "0.12", features = ["future"] }

# OpenTelemetry
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic", "metrics", "trace"] }
tracing-opentelemetry = "0.22"

# SQL databases
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "mysql", "sqlite", "tls-rustls"] }

# NoSQL databases
mongodb = "2.8"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Stream utilities
futures = "0.3"
